Fixed z-index on timecode bar

--- a/assets/css/about_style.css
+++ b/assets/css/about_style.css
@@ -80,7 +80,7 @@ body {
 .timecode-bar {
     position: fixed;
     top: 0; left: 0; right: 0;
-    z-index: 99;
+    z-index: 101;
     display: flex;
     align-items: center;
     justify-content: center;
