--- a/assets/css/index_style.css
+++ b/assets/css/index_style.css
@@ -106,7 +106,7 @@ body.page-exit {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 99;
+    z-index: 101;
     display: flex;
     align-items: center;
     justify-content: center;
